update module that make sketch shadow sketch with 80frames
